--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -35,7 +35,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="date/add">Crear Speed Date</a></li>
-                        <li><a class="dropdown-item" href="date/signup">Inscribirse</a></li>
+                        <!-- <li disabled="disabled"><a class="dropdown-item" href="date/signup">Inscribirse</a></li> -->
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="announce/add">Crear Proyecto</a></li>
                         <li><a class="dropdown-item" href="lookup">Buscar Proyecto</a></li>
-                        <li><a class="dropdown-item" href="survey">Evaluar Experiencia</a></li>
+                        <!-- <li><a class="dropdown-item" href="survey">Evaluar Experiencia</a></li> -->
                     </ul>
                 </li>
                 <li class="nav-item">
