Add speed date fixes

--- a/src/app/pages/speed/add/add.component.html
+++ b/src/app/pages/speed/add/add.component.html
@@ -10,7 +10,7 @@
             class="form-control"
             name="specificSizeInputName"
             placeholder="Análisis de Tendencias del COVID19"
-            [(ngModel)]="form.name"
+            [(ngModel)]="form.title"
           />
         </div>
         <div class="mb-3">
@@ -45,8 +45,8 @@
           <input
             type="text"
             class="form-control"
-            name="email"
-            placeholder="hunter@hunter.io"
+            name="speedemail"
+            placeholder="email@exple.com"
             [(ngModel)]="form.email"
           />
         </div>
