sweetAlerts in some components

--- a/src/app/pages/historic/historic.component.html
+++ b/src/app/pages/historic/historic.component.html
@@ -62,7 +62,7 @@
         </ng-container>
     </div>
     <div id="ftr">
-        <button class="btn btn-success">
+        <button class="btn btn-success" (click)="submit()">
             Generar
         </button>
     </div>
