--- a/src/app/pages/historic/historic.component.scss
+++ b/src/app/pages/historic/historic.component.scss
@@ -6,11 +6,11 @@
         padding: 1rem;
     }
     #mainContainer{
-        height: 70%;
-        width: 100%;
+        // height: 70%;
+        // width: 100%;
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        // flex-direction: column;
+        // align-items: center;
         justify-content: center;
         #formz{
             width: 50%;
